Wrap the li's complete (non-ul) content. Fix show/hide-problem.

--- a/almightree-defaults.css
+++ b/almightree-defaults.css
@@ -22,6 +22,9 @@
     margin-right: 0.2em;
     vertical-align: top;
 }
+#almightree .zoom:hover {
+    opacity: 0.8;
+}
 
 /* display the text as a block */
 #almightree .text {
